# ModifiedGem5ForSIMDMerge

./: .gitignore  .gitmodules  buildScript.fish  generateFile.fish
configs/common/: SpSpLatency.py
configs/common/cores/arm/: O3_ARM_v7a.py
src/arch/arm/: types.hh
src/arch/arm/insts/: SpSpInst.hh
src/arch/arm/insts/SpSpInterfaceV2/: CMakeLists.txt  dummy.cpp
src/arch/arm/insts/SpSpInterfaceV2/doc/: 代码结构.md  功能目标.md  开发方案.md
src/arch/arm/insts/SpSpInterfaceV2/include/SpSpInst/: EncodeDecode.hpp  Gem5Interface.hpp  PolicyFactory.hpp  PredefPolicy.hpp  SpSpCommon.hpp  SpSpInterface.hpp
src/arch/arm/insts/SpSpInterfaceV2/include/SpSpInst/realInst/: UserInterface.hpp
src/arch/arm/insts/SpSpInterfaceV2/include/SpSpInst/simInst/: CPUImpl.hpp  InternalCommon.hpp  SimEncode.hpp  Size32Cmp.hpp  UnserInterface.hpp  UserCommon.hpp
src/arch/arm/insts/SpSpInterfaceV2/test/: testAdd.cpp
src/arch/arm/isa/: bitfields.isa  includes.isa  operands.isa
src/arch/arm/isa/decoder/: decoder.isa  spsp.isa
src/arch/arm/isa/formats/: formats.isa  spsp.isa
src/arch/arm/isa/templates/: spsp.isa  templates.isa
src/base/: stl_helpers.hh
src/cpu/: FuncUnit.py  op_class.hh
src/cpu/minor/: MinorCPU.py
src/cpu/o3/: FuncUnitConfig.py
